# CloudIDE

./: .gitignore  README.md  package-lock.json
backend/: pyproject.toml
backend/src/: main.py
backend/src/api/: files.py  terminal.py
backend/src/app/: main.py
backend/src/app/api/: git.py  terminal.py
cpp/: CMakeLists.txt
cpp/Bootstrap/: CMakeLists.txt
cpp/Bootstrap/src/: bootstrap.cpp
cpp/Launcher/: CMakeLists.txt
cpp/Launcher/src/: main.cpp
cpp/lib/python/: CMakeLists.txt
cpp/lib/python/src/: API.cpp  Core.cpp  Nodes.cpp
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ActivityBar.tsx  Editor.tsx  EditorPane.tsx  Sidebar.tsx  Terminal.tsx
frontend/src/services/: tauri.ts
frontend/src/styles/: global.css
frontend/tauri/src-tauri/: Cargo.toml  tauri.conf.json
frontend/tauri/src-tauri/src/: backend.rs  commands.rs  lib.rs  main.rs
